--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">ameylia</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Kelly</strong> <span>All Rights Reserved<br></span></p>
       </div>
-      <div class="header-social-links">
+      <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/hey.meydwe/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/ameylia-dwi-0646a31b2/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
