--- a/details-ui1.html
+++ b/details-ui1.html
@@ -121,19 +121,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
+                  <img src="assets/img/portfolio/obaho1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/product-1.jpg" alt="">
+                  <img src="assets/img/portfolio/obaho2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/branding-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/books-1.jpg" alt="">
+                  <img src="assets/img/portfolio/obaho3.png" alt="">
                 </div>
 
               </div>
@@ -146,15 +142,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project date</strong>: 2020</li>
+                <li><strong>Project URL</strong>: <a href="https://www.figma.com/design/RfUtePSiTn5Hp4T5pGoonJ/menfo?node-id=0-1&t=Y4jOLhJrahQcBYFe-1">link figma Obaho</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>UI Design Obaho Apps</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Obaho dibentuk karena aplikasi ini awalnya akan diikutsertakan dalam perlombaan Digifest 2020 oleh Telkom Indonesia. Bersama tim saya 1 orang, kami berdua membuat Obaho dengan latar belakang untuk memudahkan user saat mencari tim untuk olahraga bersama apalagi di jaman Covid-19. Tentunya ide kami ini disupport sekolah hingga tim kami masuk ke dalam kategori 50 besar dari seluruh tim 1 sekolah. Aplikasi Obaho ini belum jadi 100% masuk ke dalam sistemnya, karena tim kami tidak lolos sampai babak final.
               </p>
             </div>
           </div>
@@ -166,7 +161,7 @@
     </section><!-- /Portfolio Details Section -->
 
   </main>
-
+  
   <footer id="footer" class="footer light-background">
 
     <div class="container">
