--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Ameylia</h1>
+        <h5 class="sitename">Ameylia</h5>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -115,7 +115,7 @@
                 <h4>UI Design Obaho</h4>
                 <p>Obaho Apps</p>
                 <a href="assets/img/masonry-portfolio/obaho.png" title="UI 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-ui1.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
