--- a/details-ui1.html
+++ b/details-ui1.html
@@ -92,7 +92,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio Details</h2>
-        <p>Berikut penjelasan detail mengenai porjek saya</p>
+        <p>Berikut penjelasan detail mengenai projek saya</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -128,10 +128,6 @@
                   <img src="assets/img/portfolio/obaho2.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/obaho3.png" alt="">
-                </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -161,12 +157,12 @@
     </section><!-- /Portfolio Details Section -->
 
   </main>
-  
+
   <footer id="footer" class="footer light-background">
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Kelly</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Ameylia</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/hey.meydwe/" class="instagram"><i class="bi bi-instagram"></i></a>
