--- a/details-website1.html
+++ b/details-website1.html
@@ -92,7 +92,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio Details</h2>
-        <p>Berikut penjelasan detail mengenai porjek saya</p>
+        <p>Berikut penjelasan detail mengenai projek saya</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -121,15 +121,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/obaho1.png" alt="">
+                  <img src="assets/img/portfolio/ns1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/obaho2.png" alt="">
+                  <img src="assets/img/portfolio/ns2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/obaho3.png" alt="">
+                  <img src="assets/img/portfolio/ns3.png" alt="">
                 </div>
 
               </div>
@@ -141,16 +141,17 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project date</strong>: 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.figma.com/design/RfUtePSiTn5Hp4T5pGoonJ/menfo?node-id=0-1&t=Y4jOLhJrahQcBYFe-1">link figma Obaho</a></li>
+                <li><strong>Category</strong>: Website</li>
+                <li><strong>Project date</strong>: August-Dec 2023</li>
+                <li><strong>Project URL</strong>: <a href="https://pesonawisata.trenggalekkab.go.id/">website Nakula Sadewa</a></li>
+                <li><strong>Project URL</strong>: <a href="https://pesonawisata.trenggalekkab.go.id/admin/login">website admin Nakula Sadewa</a> login dengan username "admin@gmail.com" password "123"</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/shuuchan25/nakula-sadewa">link repositori</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>UI Design Obaho Apps</h2>
+              <h2>Website Nakula Sadewa</h2>
               <p>
-                Obaho dibentuk karena aplikasi ini awalnya akan diikutsertakan dalam perlombaan Digifest 2020 oleh Telkom Indonesia. Bersama tim saya 1 orang, kami berdua membuat Obaho dengan latar belakang untuk memudahkan user saat mencari tim untuk olahraga bersama apalagi di jaman Covid-19. Tentunya ide kami ini disupport sekolah hingga tim kami masuk ke dalam kategori 50 besar dari seluruh tim 1 sekolah. Aplikasi Obaho ini belum jadi 100% masuk ke dalam sistemnya, karena tim kami tidak lolos sampai babak final.
-              </p>
+                Website Nakula Sadewa dibuat dengan latar belakang untuk membranding berbagai jenis wisata di Kabupaten Trenggalek. Website ini dibentuk atas kerjasama antara Dinas Pariwisata dan Kebudayaan Kabupaten Trenggalek dengan Fakultas Vokasi Universitas Brawijaya. Pada projek ini saya berperan sebagai Frontend Developer dan UI/UX Designer (include desainer grafis yaitu desain banner produk). Website ini nantinya akan dikelola oleh pihak Dinas sebagai superadmin dan juga pihak pengelola wisata sebagai admin. Tujuan website ini hanya sebatas untuk kalkulasi harga saja, mulai dari harga wisata kuliner, wisata alam, wisata budaya, wisata buatan, penginapan, transportasi, dll. Sehingga pada website ini tidak bisa dilakukan transaksi. Tentunya hal ini akan memudahkan wisatawan dalam maupun luar daerah dalam menghitung total harga ketika berwisata di Kabupaten Trenggalek.</p>
             </div>
           </div>
 
@@ -166,7 +167,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Kelly</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Ameylia</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/hey.meydwe/" class="instagram"><i class="bi bi-instagram"></i></a>
