--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">UI/UX</li>
             <li data-filter=".filter-product">Website</li>
-            <li data-filter=".filter-branding">Design</li>
+            <li data-filter=".filter-branding">Content Creator & Design</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -125,7 +125,7 @@
                 <h4>Website Nakula Sadewa</h4>
                 <p>Projek kerjasama Dinas Pariwisata Trenggalek & Vokasi UB</p>
                 <a href="assets/img/masonry-portfolio/nakula sadewa.png" title="Website 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-website1.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -135,17 +135,17 @@
                 <h4>UI/UX PS Medicare Apps</h4>
                 <p>Desain Apps layanan rumah sakit</p>
                 <a href="assets/img/masonry-portfolio/medicare.png" title="UI 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-ui2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/masonry-portfolio/nakula ui.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>UI Design Website Nakula Sadewa</h4>
+                <h4>UI Design Website Nakula Sadewa & Desain Poster Nakula Sadewa</h4>
                 <p>Desain tampilan website Nakula Sadewa</p>
                 <a href="assets/img/masonry-portfolio/nakula ui.png" title="UI 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-ui3.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -155,7 +155,7 @@
                 <h4>Desain Assets</h4>
                 <p>Desain assets/icon untuk redesain website</p>
                 <a href="assets/img/masonry-portfolio/design assets.png" title="Desain 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-desain1.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -163,9 +163,9 @@
               <img src="assets/img/masonry-portfolio/bisa design.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Social Media Bisa Design Academy</h4>
-                <p>Content creator & technical writing</p>
+                <p>Content creator & technical writer</p>
                 <a href="assets/img/masonry-portfolio/bisa design.png" title="desain 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-desain2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -173,9 +173,19 @@
               <img src="assets/img/masonry-portfolio/kreator.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Social Media Kreator Academy</h4>
-                <p>Content creator & technical writing</p>
+                <p>Content creator & technical writer</p>
                 <a href="assets/img/masonry-portfolio/kreator.png" title="desain 3" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="details-desain3.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <img src="assets/img/masonry-portfolio/kreator.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Website Farfalle</h4>
+                <p>Website Pemesanan Makanan di Restoran Farfalle</p>
+                <a href="assets/img/masonry-portfolio/far.png" title="website 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="details-website2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -193,7 +203,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Kelly</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Ameylia</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/hey.meydwe/" class="instagram"><i class="bi bi-instagram"></i></a>
