--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <!-- <li><a href="resume.html">Resume</a></li> -->
           <!-- <li><a href="services.html">Services</a></li> -->
           <li><a href="portfolio.html" class="active">Portfolio</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -180,7 +180,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/kreator.png" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/far.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website Farfalle</h4>
                 <p>Website Pemesanan Makanan di Restoran Farfalle</p>
