--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/amelsss.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Fresh Graduate from Information Technology in Brawijaya University</h2>
