--- a/about.html
+++ b/about.html
@@ -123,8 +123,8 @@
               </div>
             </div>
             <div class="row">
-              <a href="https://drive.google.com/drive/folders/1YQkqA5ctFJxyXTHzdjNg0EFPhhIfXrMi?usp=sharing">
-                <button>Lihat CV di sini!</button>
+              <a href="https://drive.google.com/drive/folders/1YQkqA5ctFJxyXTHzdjNg0EFPhhIfXrMi?usp=sharing" class="btn-get-started" style="display: flex, center;">
+               Lihat CV di sini!
               </a>
             </div>
           </div>
