--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                 </ul>
               </div>
             </div>
-            <div class="row">
+            <div class="row tombol">
               <a href="https://drive.google.com/drive/folders/1YQkqA5ctFJxyXTHzdjNg0EFPhhIfXrMi?usp=sharing" class="btn-get-started">Lihat CV di sini!</a>
             </div>
           </div>
