--- a/details-desain1.html
+++ b/details-desain1.html
@@ -143,7 +143,7 @@
               <ul>
                 <li><strong>Category</strong>: Design</li>
                 <li><strong>Project date</strong>: May 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://drive.google.com/drive/folders/1X75qPzvvv39eRWBd2HglfV66NAumQkgu?usp=sharing">nDokumentasi Desain</a></li>
+                <li><strong>Project URL</strong>: <a href="https://drive.google.com/drive/folders/1X75qPzvvv39eRWBd2HglfV66NAumQkgu?usp=sharing">Dokumentasi Desain</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
